fixing nav bar error on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -112,12 +112,14 @@
    #listmobile{
        text-decoration: none;
        list-style-type:none;
+        width:767px;
        padding-top:10px;
        padding-bottom:20px;
-       padding-left:130px;
+       padding-left:100px;
+       padding-right: 40px;
        line-height:40px;
        background-color:#000080;
-       width:100%;
+      
        
        
    }
